* 2013-10-17 - thorben.betten@open-xchange.com

 - Fix for bug 21673: Signal appropriate permission for Unified Mail folders

* 2013-10-16 - thorben.betten@open-xchange.com

 - Fix for bug 29293: Adapted JavaDoc to current behavior on session remote distribution

* 2013-10-15 - martin.herfurth@open-xchange.com

 - Fix for bug 29268: Missing alarm value "0" for list requests.

* 2013-10-15 - thorben.betten@open-xchange.com

 - Fix for bug 29227: Extended check for S/MIME messages according to rfc5751; section-3.9
 - Fix for bug 29187: Localized submit button name
 - Fix for bug 29282: Sanitize invalid UTC date format string
 - Fix for bug 29283: More robust parsing if a header's parameter list

* 2013-10-14 - thorben.betten@open-xchange.com

 - Fix for bug 29263: Fixed property constant from "com.openexchange. cookie.forceHTTPS" to "com.openexchange.forceHTTPS"
 - Fix for bug 29262: Read Jolokia configuration only if enabled via "com.openexchange.jolokia.start" property
 - Fix for bug 26979: Interrupt-aware CharSequence to stop excessive computations in Java regex plus size limitation for CSS selectors (not more than 2KB)

* 2013-10-11 - marc.arens@open-xchange.com

 - Fix for bug 29235: Move logger call above ServletResponse.getWriter which might fail and swallow error infos

* 2013-10-11 - marcus.klein@open-xchange.com

 - Partial fix for bug 26072: Detect changed context class loader in thread pool and restore the original one. Writing error into log file
   when context class loader is changed.

* 2013-10-11 - thorben.betten@open-xchange.com

 - Fix for bug 29232: Handle a meanwhile expunged message appropriately
 - Fix for bug 29233: Push read-write connection back into pool while signaling that it has been used for reading only
 - Fix for bug 29230: Handle possible "ParsingFeedException" when reading RSS feed's XML content
 - Fix for bug 29246: Check MailFolder for not null when fetching from cache